--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
+    "build": "node --max-old-space-size=4096 node_modules/.bin/react-scripts build",
     "dev": "nodemon index.js"
   },
   "keywords": [],
