--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-REACT_APP_BASE_URL=https://studymania-deploy.onrender.com/api/v1
+REACT_APP_BASE_URL=
+# new render deployment link added 
 RAZORPAY_KEY = rzp_test_r2ecOU64BuEFqe
