--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_BASE_URL=
+REACT_APP_BASE_URL=https://deploy-study-mania-backend.onrender.com/api/v1
 # new render deployment link added 
 RAZORPAY_KEY = rzp_test_r2ecOU64BuEFqe
